[gd_scene load_steps=16 format=3 uid="uid://dme2x3k2lk2lb"]

[ext_resource type="Script" path="res://scenes/Player/Sprites.gd" id="1_6wdop"]
[ext_resource type="Texture2D" uid="uid://ddsqn2u7xkjqc" path="res://assets/player/standard/UpperArmRight.png" id="1_j4f8v"]
[ext_resource type="Texture2D" uid="uid://d3qr21deckwjb" path="res://assets/player/standard/LowerArmRight.png" id="2_uwfom"]
[ext_resource type="Texture2D" uid="uid://b7tncp3icuu4h" path="res://assets/player/standard/LowerLegRight.png" id="3_8cvw6"]
[ext_resource type="Texture2D" uid="uid://cuvve3sl8lk7u" path="res://assets/player/standard/FootRight.png" id="4_e1w7c"]
[ext_resource type="Texture2D" uid="uid://85npnljt0gs" path="res://assets/player/standard/UpperLegRight.png" id="5_kl0o2"]
[ext_resource type="Texture2D" uid="uid://df4ucc2eixdx8" path="res://assets/player/standard/Torso.png" id="6_5aks6"]
[ext_resource type="Texture2D" uid="uid://dvxy1x2hroj6e" path="res://assets/player/standard/UpperLegLeft.png" id="8_apmmj"]
[ext_resource type="Texture2D" uid="uid://bnvjxkjyxnpo8" path="res://assets/player/standard/LowerLegLeft.png" id="9_3om4u"]
[ext_resource type="Texture2D" uid="uid://beo2fstr6qwnh" path="res://assets/player/standard/FootLeft.png" id="10_0fndb"]
[ext_resource type="Texture2D" uid="uid://b8qrhmk4wcuk" path="res://assets/player/standard/UpperArmLeft.png" id="11_asgfm"]
[ext_resource type="Texture2D" uid="uid://b657f2lecmf1g" path="res://assets/player/standard/LowerArmLeft.png" id="13_c0gd2"]
[ext_resource type="Texture2D" uid="uid://s0ws687p8svs" path="res://assets/player/standard/Head.png" id="14_q7elc"]
[ext_resource type="Texture2D" uid="uid://hhfumclxl3op" path="res://assets/player/standard/Expression_Neutral.png" id="16_f6b8q"]

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_8nfk3"]
enabled = true

[node name="Sprites" type="Skeleton2D"]
rotation = 3.14159
scale = Vector2(-0.1, -0.1)
modification_stack = SubResource("SkeletonModificationStack2D_8nfk3")
script = ExtResource("1_6wdop")

[node name="UpperArmRight" type="Sprite2D" parent="."]
position = Vector2(40.0014, -560)
rotation = -0.0341038
scale = Vector2(0.999991, 0.999991)
texture = ExtResource("1_j4f8v")
offset = Vector2(-21.4519, 53.7092)

[node name="Equipment" type="Sprite2D" parent="UpperArmRight"]
position = Vector2(-117.885, -64.0576)

[node name="LowerArmRight" type="Sprite2D" parent="."]
position = Vector2(-9.99854, -550)
rotation = -0.0354398
scale = Vector2(0.999991, 0.999991)
texture = ExtResource("2_uwfom")
offset = Vector2(20.8534, 37.2025)

[node name="WeaponRight" type="Sprite2D" parent="LowerArmRight"]

[node name="Equipment" type="Sprite2D" parent="LowerArmRight"]
position = Vector2(-140.622, 15.0266)

[node name="UpperLegRight" type="Sprite2D" parent="."]
position = Vector2(-119.999, -320)
rotation = 0.146272
scale = Vector2(0.999991, 0.999991)
texture = ExtResource("5_kl0o2")
offset = Vector2(33.5656, 129.636)

[node name="Equipment" type="Sprite2D" parent="UpperLegRight"]
position = Vector2(40, 105.911)

[node name="LowerLegRight" type="Sprite2D" parent="."]
position = Vector2(-99.9994, -230)
rotation = 0.114454
scale = Vector2(0.999991, 0.999991)
texture = ExtResource("3_8cvw6")
offset = Vector2(1.07996, 30.9249)

[node name="Equipment" type="Sprite2D" parent="LowerLegRight"]
position = Vector2(-17.2417, 112.707)

[node name="FootRight" type="Sprite2D" parent="LowerLegRight"]
position = Vector2(-15.3013, 42.0227)
rotation = -0.12651
texture = ExtResource("4_e1w7c")

[node name="Equipment" type="Sprite2D" parent="LowerLegRight/FootRight"]
position = Vector2(-42.2885, 189.506)

[node name="Torso" type="Bone2D" parent="."]
position = Vector2(0, -400)
rest = Transform2D(1, 0, 0, 1, 0, -400)
editor_settings/show_bone_gizmo = false

[node name="Torso" type="Sprite2D" parent="Torso"]
position = Vector2(30.0009, 50.0001)
rotation = -0.0341038
scale = Vector2(0.999991, 0.999991)
texture = ExtResource("6_5aks6")
offset = Vector2(9.91063, -171.367)

[node name="Equipment" type="Sprite2D" parent="Torso/Torso"]
position = Vector2(-32.8161, -211.244)

[node name="UpperLegLeft" type="Bone2D" parent="Torso"]
position = Vector2(90, 40)
rest = Transform2D(1, 0, 0, 1, 90, 40)
editor_settings/show_bone_gizmo = false

[node name="UpperLegLeft" type="Sprite2D" parent="Torso/UpperLegLeft"]
position = Vector2(-29.9992, 50.0002)
rotation = -0.0672223
scale = Vector2(0.999951, 0.999951)
texture = ExtResource("8_apmmj")
offset = Vector2(34.4006, 159.943)

[node name="Equipment" type="Sprite2D" parent="Torso/UpperLegLeft/UpperLegLeft"]
position = Vector2(44, 135)

[node name="LowerLegLeft" type="Bone2D" parent="Torso/UpperLegLeft"]
position = Vector2(10, 200)
rotation = 1.56342
rest = Transform2D(0.00737585, 0.999973, -0.999973, 0.00737585, 10, 200)
editor_settings/show_bone_gizmo = false

[node name="LowerLegLeft" type="Sprite2D" parent="Torso/UpperLegLeft/LowerLegLeft"]
position = Vector2(-79.9976, -0.590698)
rotation = -1.58825
scale = Vector2(0.999927, 0.999927)
texture = ExtResource("9_3om4u")
offset = Vector2(6.93229, 95.7289)

[node name="Equipment" type="Sprite2D" parent="Torso/UpperLegLeft/LowerLegLeft/LowerLegLeft"]
position = Vector2(-14.4673, 179.709)
rotation = -0.0352448

[node name="FootLeft" type="Bone2D" parent="Torso/UpperLegLeft/LowerLegLeft"]
position = Vector2(160.143, -18.8193)
rotation = 1.31223
rest = Transform2D(0.255693, 0.966758, -0.966758, 0.255693, 160.143, -18.8193)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="FootLeft" type="Sprite2D" parent="Torso/UpperLegLeft/LowerLegLeft/FootLeft"]
position = Vector2(-32.4028, 157.003)
rotation = -2.91215
scale = Vector2(0.999927, 0.999927)
texture = ExtResource("10_0fndb")

[node name="Equipment" type="Sprite2D" parent="Torso/UpperLegLeft/LowerLegLeft/FootLeft/FootLeft"]
position = Vector2(-26.5576, 179.163)

[node name="UpperArmLeft" type="Bone2D" parent="Torso"]
position = Vector2(120, -310)
rest = Transform2D(1, -2.32831e-09, 2.32831e-09, 1, 120, -310)
editor_settings/show_bone_gizmo = false

[node name="UpperArmLeft" type="Sprite2D" parent="Torso/UpperArmLeft"]
position = Vector2(-109.999, 140)
rotation = -0.0407934
scale = Vector2(0.999945, 0.999945)
texture = ExtResource("11_asgfm")
offset = Vector2(6.84171, 57.243)

[node name="Equipment" type="Sprite2D" parent="Torso/UpperArmLeft/UpperArmLeft"]
position = Vector2(142.338, -54.2432)

[node name="LowerArmLeft" type="Bone2D" parent="Torso/UpperArmLeft"]
position = Vector2(80, 140)
rotation = 1.15907
scale = Vector2(1, 1)
rest = Transform2D(0.400191, 0.916432, -0.916432, 0.400191, 80, 140)
auto_calculate_length_and_angle = false
length = 200.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="WeaponLeft" type="Sprite2D" parent="Torso/UpperArmLeft/LowerArmLeft"]
position = Vector2(261.243, 201.375)
rotation = -1.31138

[node name="LowerArmLeft" type="Sprite2D" parent="Torso/UpperArmLeft/LowerArmLeft"]
position = Vector2(-132.703, 203.934)
rotation = -1.15768
scale = Vector2(0.999927, 0.999927)
texture = ExtResource("13_c0gd2")
offset = Vector2(64.0081, 108.678)

[node name="Equipment" type="Sprite2D" parent="Torso/UpperArmLeft/LowerArmLeft/LowerArmLeft"]
position = Vector2(300.202, 129.593)

[node name="HandLeft" type="Bone2D" parent="Torso/UpperArmLeft/LowerArmLeft"]
position = Vector2(141.987, -25.2916)
rotation = -0.0883439
scale = Vector2(1, 1)
rest = Transform2D(0.9961, -0.088229, 0.088229, 0.9961, 141.987, -25.2916)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="UpperArmRight" type="Bone2D" parent="Torso"]
position = Vector2(-30, -320)
rest = Transform2D(1, 0, 0, 1, -30, -320)
editor_settings/show_bone_gizmo = false

[node name="RemoteUpperArmRight" type="RemoteTransform2D" parent="Torso/UpperArmRight"]
position = Vector2(70.0014, 160)
rotation = -0.0341038
scale = Vector2(0.999991, 0.999991)
remote_path = NodePath("../../../UpperArmRight")

[node name="LowerArmRight" type="Bone2D" parent="Torso/UpperArmRight"]
position = Vector2(-100, 150)
rotation = 2.13734
rest = Transform2D(-0.536717, 0.843762, -0.843762, -0.536717, -100, 150)
auto_calculate_length_and_angle = false
length = 200.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="RemoteLowerArmRight" type="RemoteTransform2D" parent="Torso/UpperArmRight/LowerArmRight"]
position = Vector2(-47.5318, -111.987)
rotation = -2.17278
scale = Vector2(0.999991, 0.999991)
remote_path = NodePath("../../../../LowerArmRight")

[node name="HandRight" type="Bone2D" parent="Torso/UpperArmRight/LowerArmRight"]
position = Vector2(152.627, -2.27216)
rest = Transform2D(1, 0, 0, 1, 152.627, -2.27216)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="UpperLegRight" type="Bone2D" parent="Torso"]
position = Vector2(-70, 50)
rest = Transform2D(1, 0, 0, 1, -70, 50)
editor_settings/show_bone_gizmo = false

[node name="RemoteUpperLegRight" type="RemoteTransform2D" parent="Torso/UpperLegRight"]
position = Vector2(-49.9992, 29.9997)
rotation = 0.146272
scale = Vector2(0.999991, 0.999991)
remote_path = NodePath("../../../UpperLegRight")

[node name="LowerLegRight" type="Bone2D" parent="Torso/UpperLegRight"]
position = Vector2(-40, 180)
rotation = 1.73761
rest = Transform2D(-0.166039, 0.986119, -0.986119, -0.166039, -40, 180)
auto_calculate_length_and_angle = false
length = 200.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="RemoteLowerLegRight" type="RemoteTransform2D" parent="Torso/UpperLegRight/LowerLegRight"]
position = Vector2(-60.8279, 0.100746)
rotation = -1.62316
scale = Vector2(0.999991, 0.999991)
remote_path = NodePath("../../../../LowerLegRight")

[node name="FootRight" type="Bone2D" parent="Torso/UpperLegRight/LowerLegRight"]
position = Vector2(149.578, -15.0447)
rotation = 1.1718
rest = Transform2D(0.388498, 0.92145, -0.92145, 0.388498, 149.578, -15.0447)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="Head" type="Bone2D" parent="Torso"]
position = Vector2(50, -400)
rotation = -1.68832
scale = Vector2(1, 1)
rest = Transform2D(-0.117258, -0.993101, 0.993101, -0.117258, 50, -400)
auto_calculate_length_and_angle = false
length = 200.0
bone_angle = 0.0
editor_settings/show_bone_gizmo = false

[node name="Head" type="Sprite2D" parent="Torso/Head"]
position = Vector2(10.4812, 81.7954)
rotation = 1.65806
scale = Vector2(0.999981, 0.999981)
texture = ExtResource("14_q7elc")
offset = Vector2(35.8401, -206.274)

[node name="Equipment" type="Sprite2D" parent="Torso/Head/Head"]
position = Vector2(58.147, -268.369)
rotation = 0.015093

[node name="Expression" type="Sprite2D" parent="Torso/Head/Head"]
position = Vector2(104.638, -408.849)
rotation = 0.128645
scale = Vector2(1.00001, 1.00001)
texture = ExtResource("16_f6b8q")
offset = Vector2(-22.0814, 245.232)

[node name="Targets" type="Node2D" parent="."]
scale = Vector2(10, 10)

[node name="HeadTarget" type="Marker2D" parent="Targets"]
position = Vector2(-690, -1480)

[node name="RightArmTarget" type="Marker2D" parent="Targets"]
position = Vector2(-86, -59)

[node name="LeftArmTarget" type="Marker2D" parent="Targets"]
position = Vector2(95, -52)
